applications/proxy/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: bazarr.home.juli.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - bazarr.home.juli.sh
      secretName: bazarr-tls
